Validate simple stack creation with aws

--- a/src/CfSharp.Runner/CfSharp.Runner.csproj
+++ b/src/CfSharp.Runner/CfSharp.Runner.csproj
@@ -3,9 +3,17 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <UserSecretsId>CfSharp</UserSecretsId>
+    <StartupObject>CfSharp.Runner.Program</StartupObject>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.CloudFormation" Version="3.3.10" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.21.20" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
