--- a/src/CfSharp.Tests/CfSharp.Tests.csproj
+++ b/src/CfSharp.Tests/CfSharp.Tests.csproj
@@ -31,6 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Examples\AutoScalingMultiAZWithNotifications.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Schema\AutoScalingLaunchConfigSpecification.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
