--- a/src/CfSharp.Tests/CfSharp.Tests.csproj
+++ b/src/CfSharp.Tests/CfSharp.Tests.csproj
@@ -34,6 +34,9 @@
     <None Update="Examples\AutoScalingMultiAZWithNotifications.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Examples\TypesOfValue.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Schema\AutoScalingLaunchConfigSpecification.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
